# FinDat

./: pyproject.toml  requirements.txt
findat/: main.py
resolved_text_files/: a_brief_history_of_element_discovery_synthesis_and _analysis_by_glen_w_watson.txt  ancient_and_modern_physics_by_thomas_edgar_willson.txt  five_of_maxwells_papers_by_james_clerk_maxwell.txt  lrl_accelerators_the_184_inch_synchrocyclotron_by_lawrence_radiation_laboratory.txt  new_york_times_current_history_the_european_war_from_the_beginning_to_march_1915_vol_1_no_2.txt  new_york_times_current_history_the_european_war_vol_2_no_1_april_1915.txt  new_york_times_current_history_the_european_war_vol_2_no_2_may_1915.txt  new_york_times_current_history_the_european_war_vol_2_no_3_june_1915.txt  new_york_times_current_history_the_european_war_vol_2_no_4_july_1915.txt  new_york_times_current_history_the_european_war_vol_2_no_5_august_1915.txt  new_york_times_current_history_the_european_war_vol_8_pt_2_no_1_july.txt  new_york_times_current_history_vol_1_issue_1.txt  the_einstein_theory_of_relativity_a_concise_statement_by_h_a_lorentz.txt  the_machinery_of_the_universe_mechanical_conceptions_of_physical_phenomena.txt  the_new_physics_and_its_evolution_by_lucien_poincare.txt  the_new_york_times_current_history_of_the_european_war_vol_1_issue_4_january.txt  the_new_york_times_current_history_the_european_war_february_1915.txt
test_text/: a_brief_history_of_element_discovery_synthesis_and _analysis_by_glen_w_watson.txt  ancient_and_modern_physics_by_thomas_edgar_willson.txt  (+16 more)
