[tool.poetry]
name = "FinDat"
version = "0.1.0"
description = ""
authors = ["Brian-M-J <1dt21ai037@dsatm.edu.in>"]
readme = "README.md"
packages = [{include = "FinDat"}]

[tool.poetry.dependencies]
python = "^3.11"
fastcoref = "^2.1.5"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
